[gd_scene load_steps=10 format=2]

[ext_resource path="res://dpcomic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://sfx/InteractSound.wav" type="AudioStream" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
size = 75
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.784314, 0.784314, 0.784314, 0.490196 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -216, 152 )
color = Color( 0, 0, 0, 0.513726 )

[node name="Panel" type="Panel" parent="."]
margin_left = 256.0
margin_top = 64.0
margin_right = 768.0
margin_bottom = 512.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Panel"]
margin_left = 32.0
margin_top = 40.0
margin_right = 488.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 2 )
text = "Game
Paused"
align = 1

[node name="Resume" type="Button" parent="Panel"]
margin_left = 128.0
margin_top = 192.0
margin_right = 384.0
margin_bottom = 243.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Resume"

[node name="MainMenu" type="Button" parent="Panel"]
margin_left = 128.0
margin_top = 264.0
margin_right = 384.0
margin_bottom = 315.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Main Menu"

[node name="QuitGame" type="Button" parent="Panel"]
margin_left = 128.0
margin_top = 336.0
margin_right = 384.0
margin_bottom = 387.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Quit Game"

[node name="InteractSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="button_up" from="Panel/Resume" to="." method="_on_Resume_button_up"]
[connection signal="pressed" from="Panel/Resume" to="." method="_on_Resume_pressed"]
[connection signal="button_up" from="Panel/MainMenu" to="." method="_on_MainMenu_button_up"]
[connection signal="pressed" from="Panel/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="button_up" from="Panel/QuitGame" to="." method="_on_QuitGame_button_up"]
[connection signal="pressed" from="Panel/QuitGame" to="." method="_on_QuitGame_pressed"]
